<resources>
    <string name="app_name">WWBank</string>

    <string name="title_business">业务</string>
    <string name="title_user">我的</string>
    <string name="title_friends">朋友圈</string>
    <string name="title_friends_all">供应链朋友圈</string>
    <string name="title_files">文件</string>
    <string name="title_chats">聊天</string>
    <string name="title_member">成员</string>

    <string name="project1">2021年3月 + 华北地区项目</string>
    <string name="project2">2021年3月 + 广东地区项目</string>
    <string name="project3">2021年3月 + 香港地区项目</string>

    <string name="business1">意大利进口红酒业务</string>
    <string name="business2">法国进口红酒业务</string>
    <string name="business3">西班牙进口红酒业务</string>

    <string name="company1">中国远洋海运集团有限公司</string>
    <string name="company2">招商银行上海分行</string>
    <string name="company3">ASC精品酒业</string>
    <string name="company4">豪客来餐饮娱乐有限公司</string>
</resources>